--- a/app/src/main/res/layout/activity_suggestion_list.xml
+++ b/app/src/main/res/layout/activity_suggestion_list.xml
@@ -10,28 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
+        <ListView
+            android:id="@+id/suggestion_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/activity_suggestion_list"
-            android:clickable="true">
-
-            <android.widget.Space
-                android:layout_width="match_parent"
-                android:layout_height="20dp"/>
-
-            <include layout="@layout/list_item_suggestion"/>
-            <include layout="@layout/list_item_suggestion"/>
-            <include layout="@layout/list_item_suggestion"/>
-            <include layout="@layout/list_item_suggestion"/>
-            <include layout="@layout/list_item_suggestion"/>
-            <include layout="@layout/list_item_suggestion"/>
-            <include layout="@layout/list_item_suggestion"/>
-            <include layout="@layout/list_item_suggestion"/>
-            <include layout="@layout/list_item_suggestion"/>
-
-        </LinearLayout>
+            android:footerDividersEnabled="false"
+            android:divider="#fff"
+            android:dividerHeight="1px"/>
 
     </ScrollView>
 
