--- a/app/src/main/res/layout/list_item_comment.xml
+++ b/app/src/main/res/layout/list_item_comment.xml
@@ -1,43 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="90dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="15dp">
+                android:layout_height="wrap_content"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:paddingBottom="20dp">
 
     <ImageView
-        android:id="@+id/icon"
+        android:id="@+id/thumbnail"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="15dp"
-        android:src="@drawable/mikael_delta_profile_picture"
         android:scaleType="centerCrop"/>
 
     <TextView
-        android:id="@+id/first_line"
-        android:layout_below="@id/first_line"
+        android:id="@+id/username_and_date"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="3dp"
         android:singleLine="true"
-        android:layout_toEndOf="@id/icon"
+        android:layout_toEndOf="@id/thumbnail"
         android:layout_alignParentEnd="true"
         android:ellipsize="marquee"
         android:gravity="center_vertical"
-        android:textStyle="bold"
-        android:text="testbruker @ 30.04.16"/>
+        android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/second_line"
-        android:layout_below="@id/first_line"
+        android:id="@+id/comment"
+        android:layout_below="@id/username_and_date"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp"
-        android:layout_toEndOf="@id/icon"
+        android:layout_toEndOf="@id/thumbnail"
         android:layout_alignParentEnd="true"
-        android:gravity="bottom"
-        android:text="Jeg syntes også at flere av bygningene har en karakter som er verdt å ta vare på."/>
+        android:gravity="bottom"/>
 
 </RelativeLayout>
