Added message if no comments. Added correct text to agree/disagree buttons.

--- a/app/src/main/res/layout/activity_suggestion.xml
+++ b/app/src/main/res/layout/activity_suggestion.xml
@@ -16,5 +16,11 @@
         android:divider="#fff"
         android:dividerHeight="1px"/>
 
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"/>
+
 
 </LinearLayout>
