--- a/app/src/main/res/layout/suggestion_header.xml
+++ b/app/src/main/res/layout/suggestion_header.xml
@@ -65,13 +65,13 @@
         android:paddingBottom="20dp">
 
         <Space
-            android:layout_weight="0.5"
+            android:layout_weight="0.2"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"/>
 
         <TextView
             android:id="@+id/agreements"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
@@ -83,7 +83,7 @@
 
         <TextView
             android:id="@+id/disagreements"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_weight="1"
@@ -94,7 +94,7 @@
             android:clickable="true"/>
 
         <Space
-            android:layout_weight="0.5"
+            android:layout_weight="0.2"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"/>
 
