--- a/app/src/main/res/layout/list_item_empty.xml
+++ b/app/src/main/res/layout/list_item_empty.xml
@@ -4,14 +4,13 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:paddingStart="40dp"
-              android:paddingTop="20dp"
-    android:paddingEnd="40dp"
-    android:paddingBottom="40dp">
+              android:paddingEnd="40dp"
+              android:paddingBottom="40dp">
 
     <TextView
         android:id="@+id/message"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:gravity="center"/>
 
 </LinearLayout>
