--- a/app/src/main/res/layout/list_item_suggestion.xml
+++ b/app/src/main/res/layout/list_item_suggestion.xml
@@ -2,7 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-    android:padding="20dp">
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp">
 
     <ImageView
         android:id="@+id/thumbnail"
