--- a/app/src/main/res/layout/activity_task_first.xml
+++ b/app/src/main/res/layout/activity_task_first.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:padding="15dp"/>
+        android:textSize="16sp"
+        android:padding="30dp"/>
 
 </LinearLayout>
