--- a/app/src/main/res/layout/activity_task_scale.xml
+++ b/app/src/main/res/layout/activity_task_scale.xml
@@ -14,6 +14,12 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/dora"/>
+
             <!-- task_scale.xml will be inflated here -->
 
         </LinearLayout>
