--- a/app/src/main/res/layout/task_scale.xml
+++ b/app/src/main/res/layout/task_scale.xml
@@ -22,14 +22,14 @@
             android:id="@+id/seekbar"
             android:layout_weight="0.7"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:max="4"/>
 
         <TextView
             android:id="@+id/seekbar_text"
             android:layout_weight="0.3"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:textStyle="bold"
             android:gravity="center"/>
 
