--- a/app/src/main/res/layout/fragment_top_list.xml
+++ b/app/src/main/res/layout/fragment_top_list.xml
@@ -1,26 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <include layout="@layout/list_item_top_list"/>
-        <include layout="@layout/list_item_top_list"/>
-        <include layout="@layout/list_item_top_list"/>
-        <include layout="@layout/list_item_top_list"/>
-        <include layout="@layout/list_item_top_list"/>
-        <include layout="@layout/list_item_top_list"/>
-        <include layout="@layout/list_item_top_list"/>
-        <include layout="@layout/list_item_top_list"/>
-        <include layout="@layout/list_item_top_list"/>
-        <include layout="@layout/list_item_top_list"/>
-
-    </LinearLayout>
-
-</ScrollView>
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+          android:id="@+id/top_list"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:footerDividersEnabled="false"
+          android:divider="@android:color/transparent"
+          android:background="@color/white"/>
