--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,6 +10,7 @@
                   android:background="@android:color/white">
 
         <ImageView
+            android:id="@+id/avatar"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
@@ -17,17 +18,17 @@
             android:src="@drawable/mikael_delta_profile_picture"/>
 
         <TextView
+            android:id="@id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Mikael Reiersølmoen"
             android:textStyle="bold"/>
 
         <TextView
+            android:id="@+id/score"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Poeng: 2230"/>
+            android:layout_gravity="center"/>
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -51,6 +52,7 @@
                 android:layout_weight="1">
 
                 <TextView
+                    android:id="@+id/missions_completed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -58,8 +60,7 @@
                     android:textStyle="bold"
                     android:textSize="18sp"
                     android:drawableStart="@drawable/ic_explore_teal400_18dp"
-                    android:drawablePadding="5dp"
-                    android:text="2"/>
+                    android:drawablePadding="5dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -81,6 +82,7 @@
                 android:layout_weight="1">
 
                 <TextView
+                    android:id="@+id/suggestions_posted"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -88,8 +90,7 @@
                     android:textStyle="bold"
                     android:textSize="18sp"
                     android:drawableStart="@drawable/ic_lightbulb_teal400_18dp"
-                    android:drawablePadding="5dp"
-                    android:text="3"/>
+                    android:drawablePadding="5dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -110,6 +111,7 @@
                 android:layout_weight="1">
 
                 <TextView
+                    android:id="@+id/comments_posted"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -117,8 +119,7 @@
                     android:textStyle="bold"
                     android:textSize="18sp"
                     android:drawableStart="@drawable/ic_forum_teal400_18dp"
-                    android:drawablePadding="5dp"
-                    android:text="5"/>
+                    android:drawablePadding="5dp"/>
 
                 <TextView
                     android:layout_width="wrap_content"
