--- a/app/src/main/res/layout/list_item_activity_log_divider.xml
+++ b/app/src/main/res/layout/list_item_activity_log_divider.xml
@@ -4,16 +4,16 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textStyle="bold"-->
-        <!--android:paddingTop="10dp"-->
-        <!--android:paddingBottom="10dp"-->
-        <!--android:paddingStart="15dp"-->
-        <!--android:paddingEnd="15dp"-->
-        <!--android:background="@color/list_divider"-->
-        <!--android:text="21. april"/>-->
+    <TextView
+        android:id="@+id/date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingStart="15dp"
+        android:paddingEnd="15dp"
+        android:background="@color/list_divider"/>
 
     <LinearLayout
         android:layout_width="match_parent"
