--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,11 +11,11 @@
 
         <ImageView
             android:id="@+id/avatar"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
+            android:layout_width="170dp"
+            android:layout_height="170dp"
             android:layout_gravity="center"
             android:padding="20dp"
-            android:src="@drawable/mikael_delta_profile_picture"/>
+            android:clickable="true"/>
 
         <TextView
             android:id="@id/username"
