--- a/app/src/main/res/layout/suggestion_header.xml
+++ b/app/src/main/res/layout/suggestion_header.xml
@@ -5,12 +5,28 @@
               android:layout_height="wrap_content"
               android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/nyhavna2_hires"/>
+        android:layout_height="170dp">
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:clickable="true"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:src="@drawable/ic_photo_size_select_large_white_24dp"
+            android:padding="15dp"/>
+
+    </RelativeLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
