--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,6 +25,9 @@
     <color name="gray_90">#e5e5e5</color>
 
     <color name="white">#ffffff</color>
+    <color name="white_trans_30">#4dffffff</color>
+
     <color name="black">#000000</color>
+    <color name="black_trans_90">#E6000000</color>
 
 </resources>
