--- a/app/src/main/res/layout/activity_suggestion_list.xml
+++ b/app/src/main/res/layout/activity_suggestion_list.xml
@@ -6,6 +6,8 @@
 
     <include layout="@layout/toolbar"/>
 
+    <include layout="@layout/progess_spinner"/>
+
     <ListView
         android:id="@+id/suggestion_list"
         android:layout_width="match_parent"
