--- a/app/src/main/res/layout/activity_suggestion_list.xml
+++ b/app/src/main/res/layout/activity_suggestion_list.xml
@@ -6,7 +6,7 @@
 
     <include layout="@layout/toolbar"/>
 
-    <include layout="@layout/progess_spinner"/>
+    <include layout="@layout/progress_spinner"/>
 
     <ListView
         android:id="@+id/suggestion_list"
