--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:layout_height="match_parent">
 
     <com.google.android.gms.maps.MapView android:id="@+id/map"
                                          android:layout_height="match_parent"
                                          android:layout_width="match_parent"
                                          tools:context=".MapFragment"/>
 
-    <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:id="@+id/map"-->
-    <!--tools:context=".MapFragment"-->
-    <!--android:name="com.google.android.gms.maps.SupportMapFragment"/>-->
-
-</LinearLayout>
+</RelativeLayout>
