--- a/app/src/main/res/layout/fragment_activity_log.xml
+++ b/app/src/main/res/layout/fragment_activity_log.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/activity_log_list"
-          android:layout_height="match_parent"
-          android:layout_width="match_parent"
-          android:footerDividersEnabled="false"
-          android:divider="@android:color/transparent"
-          android:background="@color/white"/>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:orientation="vertical"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
+
+    <ListView android:id="@+id/activity_log_list"
+              android:layout_height="match_parent"
+              android:layout_width="match_parent"
+              android:footerDividersEnabled="false"
+              android:divider="@android:color/transparent"
+              android:background="@color/white"/>
+
+</LinearLayout>
