--- a/app/src/main/res/layout/activity_project.xml
+++ b/app/src/main/res/layout/activity_project.xml
@@ -3,7 +3,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:orientation="vertical">
+              android:orientation="vertical"
+              android:background="@android:color/white">
 
     <include layout="@layout/toolbar"/>
 
@@ -12,11 +13,10 @@
 
         <LinearLayout android:orientation="vertical"
                       android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:background="@android:color/white">
+                      android:layout_height="wrap_content">
 
             <ImageView
-                android:id="@+id/project_picture"
+                android:id="@+id/project_image"
                 android:layout_height="150dp"
                 android:layout_width="fill_parent"
                 android:scaleType="centerCrop"
