--- a/app/src/main/res/layout/activity_task_text.xml
+++ b/app/src/main/res/layout/activity_task_text.xml
@@ -12,10 +12,10 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/nyhavna3"/>
+            android:scaleType="centerCrop"/>
 
         <TextView
             android:id="@+id/text_task_text"
