--- a/app/src/main/res/layout/fragment_image_dialog.xml
+++ b/app/src/main/res/layout/fragment_image_dialog.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:background="@color/gray_90">
+              android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/take_photo"
