--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,12 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/map_wrapper"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <com.google.android.gms.maps.MapView android:id="@+id/map"
                                          android:layout_height="match_parent"
                                          android:layout_width="match_parent"
                                          tools:context=".MapFragment"/>
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/project_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
+        card_view:cardBackgroundColor="@color/gray_98"
+        card_view:cardCornerRadius="0dp"
+        card_view:cardElevation="6dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/project_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:padding="20dp"
+                android:textSize="22sp"/>
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="?attr/borderlessButtonStyle"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:padding="20dp"
+                android:textColor="@color/teal_400"
+                android:text="@string/read_more"/>
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
