--- a/app/src/main/res/layout/task_text.xml
+++ b/app/src/main/res/layout/task_text.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:orientation="vertical">
 
     <include layout="@layout/toolbar"/>
 
@@ -11,11 +11,27 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/image"
+        <RelativeLayout
+            android:id="@+id/imageWrapper"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:scaleType="centerCrop"/>
+            android:layout_height="150dp">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                android:clickable="true"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_photo_size_select_large_white_24dp"
+                android:padding="15dp"/>
+
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/text_task_text"
