--- a/app/src/main/res/layout/task_text.xml
+++ b/app/src/main/res/layout/task_text.xml
@@ -19,7 +19,7 @@
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="150dp"
                 android:scaleType="centerCrop"
                 android:clickable="true"/>
 
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:hint="@string/your_response_here"
+            android:hint="@string/your_response"
             android:inputType="textMultiLine|textCapSentences"
             android:lines="4"
             android:minLines="1"
