--- a/app/src/main/res/layout/list_item_empty.xml
+++ b/app/src/main/res/layout/list_item_empty.xml
@@ -3,6 +3,7 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/white"
               android:paddingStart="40dp"
               android:paddingEnd="40dp"
               android:paddingBottom="40dp">
