--- a/app/src/main/res/layout/task_alternative.xml
+++ b/app/src/main/res/layout/task_alternative.xml
@@ -9,7 +9,7 @@
     <ScrollView android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-        <LinearLayout android:id="@+id/parent_layout_task_scale"
+        <LinearLayout android:id="@+id/parent_layout_task_alternative"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical">
@@ -38,9 +38,25 @@
 
             <TextView android:id="@+id/description"
                       android:layout_width="match_parent"
-                      android:layout_height="wrap_content"/>
+                      android:layout_height="wrap_content"
+                      android:padding="15dp"
+                      android:textSize="16sp"
+                      android:textColor="@color/gray_40"/>
 
-            <!-- task_scale_item_item.xml will be inflated here -->
+            <RadioGroup android:id="@+id/radio_group"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="10dp"
+                        android:paddingEnd="10dp"/>
+
+            <EditText android:id="@+id/other_text"
+                      android:layout_width="match_parent"
+                      android:layout_height="wrap_content"
+                      android:visibility="gone"
+                      android:inputType="textCapCharacters"
+                      android:singleLine="true"/>
+
+            <!-- task_alternative_item.xml will be inflated here -->
 
         </LinearLayout>
 
