--- a/app/src/main/res/layout/task_first.xml
+++ b/app/src/main/res/layout/task_first.xml
@@ -7,7 +7,7 @@
     <include layout="@layout/toolbar"/>
 
     <TextView
-        android:id="@+id/first_task_text"
+        android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
