--- a/app/src/main/res/layout/task_text.xml
+++ b/app/src/main/res/layout/task_text.xml
@@ -34,7 +34,7 @@
         </RelativeLayout>
 
         <TextView
-            android:id="@+id/text_task_text"
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"/>
