Users get achievements

--- a/app/src/main/res/layout/list_item_achievement.xml
+++ b/app/src/main/res/layout/list_item_achievement.xml
@@ -1,46 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="?android:attr/listPreferredItemHeight"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="40dp"
-                android:layout_marginBottom="30dp">
+                android:layout_height="wrap_content"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:paddingBottom="20dp">
 
     <ImageView
-        android:id="@+id/icon"
-
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-
+        android:id="@+id/badge"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="15dp"
-
-        android:src="@drawable/ic_achievement" />
+        android:layout_marginEnd="15dp"
+        android:scaleType="centerCrop"/>
 
     <TextView
-        android:id="@+id/secondLine"
-
+        android:id="@+id/name"
         android:layout_width="fill_parent"
-        android:layout_height="42dp"
-
-        android:layout_toRightOf="@id/icon"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-
+        android:layout_height="wrap_content"
+        android:paddingBottom="3dp"
+        android:singleLine="true"
+        android:layout_toEndOf="@id/badge"
+        android:layout_alignParentEnd="true"
         android:ellipsize="marquee"
-        android:text="Fullførte et oppdrag innen en uke etter at det ble opprettet" />
+        android:gravity="center_vertical"
+        android:textStyle="bold"/>
 
     <TextView
+        android:id="@+id/description"
+        android:layout_below="@id/name"
         android:layout_width="fill_parent"
-        android:layout_height="5dp"
-
-        android:layout_toRightOf="@id/icon"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_above="@id/secondLine"
-
-        android:gravity="bottom"
-        android:text="Tidligfugl"
-        android:textStyle="bold"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="3dp"
+        android:layout_toEndOf="@id/badge"
+        android:layout_alignParentEnd="true"
+        android:gravity="bottom"/>
 
 </RelativeLayout>
