--- a/app/src/main/res/layout/suggestion_header.xml
+++ b/app/src/main/res/layout/suggestion_header.xml
@@ -121,7 +121,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="@string/comments"
+        android:text="@string/Comments"
         android:textStyle="bold"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
