--- a/app/src/main/res/layout/task_text.xml
+++ b/app/src/main/res/layout/task_text.xml
@@ -40,7 +40,7 @@
             android:padding="15dp"/>
 
         <TextView
-            android:id="@+id/question"
+            android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"/>
