--- a/app/src/main/res/layout/task_alternative.xml
+++ b/app/src/main/res/layout/task_alternative.xml
@@ -12,29 +12,39 @@
         <LinearLayout android:id="@+id/parent_layout_task_alternative"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
-                      android:orientation="vertical">
+                      android:orientation="vertical"
+                      android:paddingBottom="20dp">
 
             <RelativeLayout
-                    android:id="@+id/imageWrapper"
+                android:id="@+id/imageWrapper"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:paddingBottom="15dp">
+
+                <ImageView
+                    android:id="@+id/image"
                     android:layout_width="match_parent"
-                    android:layout_height="150dp">
+                    android:layout_height="150dp"
+                    android:scaleType="centerCrop"
+                    android:clickable="true"/>
 
                 <ImageView
-                        android:id="@+id/image"
-                        android:layout_width="match_parent"
-                        android:layout_height="150dp"
-                        android:scaleType="centerCrop"
-                        android:clickable="true"/>
-
-                <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentEnd="true"
-                        android:src="@drawable/ic_photo_size_select_large_white_24dp"
-                        android:padding="15dp"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/ic_photo_size_select_large_white_24dp"
+                    android:padding="15dp"/>
 
             </RelativeLayout>
+
+            <TextView
+                android:id="@+id/description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:textColor="@color/gray_40"/>
 
         </LinearLayout>
 
