--- a/app/src/main/res/layout/task_text.xml
+++ b/app/src/main/res/layout/task_text.xml
@@ -14,7 +14,8 @@
         <RelativeLayout
             android:id="@+id/imageWrapper"
             android:layout_width="match_parent"
-            android:layout_height="150dp">
+            android:layout_height="150dp"
+            android:paddingBottom="15dp">
 
             <ImageView
                 android:id="@+id/image"
@@ -37,10 +38,11 @@
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="15dp"/>
+            android:paddingStart="15dp"
+            android:paddingEnd="15dp"/>
 
         <TextView
-            android:id="@+id/description"
+            android:id="@+id/question"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"/>
